# llvm-project

utils/bazel/llvm-project-overlay/mlir/: BUILD.bazel  build_defs.bzl
utils/bazel/llvm-project-overlay/mlir/python/: BUILD.bazel
utils/bazel/llvm-project-overlay/mlir/python/mlir/_mlir_libs/: BUILD.bazel
